cmake_minimum_required(VERSION 3.17)
project(realmz_tools)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED True)
add_library(clips
	maya/Agenda.h
	maya/Analysis.h
	maya/ArgumentAccess.h
	maya/BasicMathFunctions.h
	maya/BasicRuleCommands.h
	maya/BinaryLoad.h
	maya/BinarySave.h
	maya/ClassCommands.h
	maya/ClassExamination.h
	maya/ClassFunctions.h
	maya/ClassInfo.h
	maya/ClassInitialization.h
	maya/ClassParser.h
	maya/ClassSlotParser.h
	maya/clips.h
	maya/CommandLine.h
	maya/ConflictResolutionStrategy.h
	maya/Constants.h
	maya/ConstraintBinaryLoadSave.h
	maya/ConstraintChecking.h
	maya/Constraint.h
	maya/ConstraintOperations.h
	maya/ConstraintParser.h
	maya/ConstraintUtilities.h
	maya/Construct.h
	maya/ConstructProfilingFunctions.h
	maya/DefaultAttribute.h
	maya/DeffactsBasicCommands.h
	maya/DeffactsBinarySaveLoad.h
	maya/Deffacts.h
	maya/DeffactsParser.h
	maya/DeffunctionBinaryLoadSave.h
	maya/DeffunctionExecution.h
	maya/Deffunction.h
	maya/DeffunctionParser.h
	maya/DefglobalBasicCommands.h
	maya/DefglobalBinary.h
	maya/DefglobalCommands.h
	maya/Defglobal.h
	maya/DefglobalParser.h
	maya/DefinstancesBinaryLoadSave.h
	maya/Definstances.h
	maya/DefmessageHandlerCommands.h
	maya/DefmessageHandlerDispatch.h
	maya/DefmessageHandlerFunctions.h
	maya/DefmessageHandlerParser.h
	maya/DefModuleBasicCommands.h
	maya/DefmoduleBinarySaveLoad.h
	maya/Defmodule.h
	maya/DefmoduleParser.h
	maya/DefmoduleUtility.h
	maya/Defrule.h
	maya/DeftemplateBasicCommands.h
	maya/DeftemplateBinarySaveLoad.h
	maya/DeftemplateFunctions.h
	maya/Deftemplate.h
	maya/DeftemplateLHS.h
	maya/DeftemplateParser.h
	maya/DeftemplateRHSParsing.h
	maya/DeftemplateUtilities.h
	maya/Developer.h
	maya/Drive.h
	maya/Engine.h
	maya/Entities.h
	maya/Environment.h
	maya/Evaluation.h
	maya/Expression.h
	maya/ExtendedMathFunctions.h
	maya/ExternalFunctions.h
	maya/FactExtensions.h
	maya/Fact.h
	maya/File.h
	maya/Generate.h
	maya/GenericFunctionBinaryLoadSave.h
	maya/GenericFunctionCommands.h
	maya/GenericFunctionExecution.h
	maya/GenericFunction.h
	maya/GenericFunctionParser.h
	maya/ImplicitSystemMethodsParsing.h
	maya/IncrementalReset.h
	maya/InferenceEngineObjectAccessRotuines.h
	maya/InferenceEngineObjectParsingRoutines.h
	maya/InstanceCommand.h
	maya/InstanceFunctions.h
	maya/InstanceManager.h
	maya/InstanceModifyAndDuplicate.h
	maya/InstanceMultifieldTypeSlot.h
	maya/InstanceParser.h
	maya/InstanceQuery.h
	maya/InstanceSaveLoadCommands.h
	maya/InstanceSetQueryParser.h
	maya/IOFunctions.h
	maya/LogicalDependencies.h
	maya/Match.h
	maya/MayaExtensions.h
	maya/MayaSetup.h
	maya/MemoryAllocation.h
	maya/MiscFunctions.h
	maya/Multifield.h
	maya/MultipleInheritanceParser.h
	maya/Network.h
	maya/ObjectBinaryLoadSave.h
	maya/Object.h
	maya/ObjectPatternMatcher.h
	maya/ObjectReteBinarySaveLoad.h
	maya/ObjectReteMatch.h
	maya/OperatingSystemShim.h
	maya/ParsingFunctions.h
	maya/Pattern.h
	maya/Platform.h
	maya/PredicateFunctions.h
	maya/PrettyPrint.h
	maya/PrintUtility.h
	maya/ProceduralCodeSupportRoutines.h
	maya/ProceduralFunctions.h
	maya/ProceduralFunctionsParser.h
	maya/Reorder.h
	maya/ReteUtility.h
	maya/Retract.h
	maya/Router.h
	maya/RuleBinarySaveLoad.h
	maya/RuleBuild.h
	maya/RuleCommands.h
	maya/RuleConstraints.h
	maya/RuleDelete.h
	maya/RuleLHSParsing.h
	maya/RuleParser.h
	maya/Scanner.h
	maya/Setup.h
	maya/SortingFunctions.h
	maya/StringFunctions.h
	maya/StringRouter.h
	maya/Symbol.h
	maya/SystemDependency.h
	maya/UserData.h
	maya/UserSetup.h
	maya/Utility.h
	maya/Watch.h
	maya/Agenda.c
	maya/Analysis.c
	maya/ArgumentAccess.c
	maya/BinaryLoad.c
	maya/BasicMathFunctions.c
	maya/BinarySave.c
	maya/ClassCommands.c
	maya/ClassExamination.c
	maya/ClassFunctions.c
	maya/ClassInfo.c
	maya/ClassInitialization.c
	maya/ClassParser.c
	maya/ClassSlotParser.c
	maya/CommandLine.c
	maya/Construct.c
	maya/Constraint.c
	maya/ConflictResolutionStrategy.c
	maya/ConstructBinaryLoadSave.c
	maya/ConstructCommand.c
	maya/ConstructParser.c
	maya/ConstraintBinaryLoadSave.c
	maya/ConstraintChecking.c
	maya/ConstraintOperations.c
	maya/ConstraintParser.c
	maya/ConstraintUtilities.c
	maya/DefaultAttribute.c
	maya/Definstances.c
	maya/Developer.c
	maya/DeffactsBinarySaveLoad.c
	maya/DeffactsBasicCommands.c
	maya/Deffacts.c
	maya/DeffactsParser.c
	maya/DeffunctionBinaryLoadSave.c
	maya/DeffunctionExecution.c
	maya/Deffunction.c
	maya/DeffunctionParser.c
	maya/DefinstancesBinaryLoadSave.c
	maya/Drive.c
	maya/ExtendedMathFunctions.c
	maya/Engine.c
	maya/Environment.c
	maya/EnvironmentBuild.c
	maya/Evaluation.c
	maya/Expression.c
	maya/ExpressionBinary.c
	maya/ExpressionOperations.c
	maya/ExpressionParser.c
	maya/ExternalFunctions.c
	maya/FactBinarySaveLoad.c
	maya/FactBuild.c
	maya/FactCommands.c
	maya/FactLoadSaveRoutines.c
	maya/FactFunctions.c
	maya/FactReteFunctionGeneration.c
	maya/FactHashing.c
	maya/FactLHSPatternParsing.c
	maya/FactMatch.c
	maya/FactManager.c
	maya/FactRetePrintFunctions.c
	maya/FactSetQueriesParser.c
	maya/FactQuery.c
	maya/FactReteAccessFunctions.c
	maya/FactRHSPatternParser.c
	maya/File.c
	maya/FileRouter.c
	maya/FileUtilities.c
	maya/Generate.c
	maya/GenericFunctionBinaryLoadSave.c
	maya/GenericFunctionCommands.c
	maya/GenericFunctionExecution.c
	maya/GenericFunction.c
	maya/GenericFunctionParser.c
	maya/DefglobalBinary.c
	maya/DefglobalBasicCommands.c
	maya/DefglobalCommands.c
	maya/Defglobal.c
	maya/DefglobalParser.c
	maya/ImplicitSystemMethodsParsing.c
	maya/IncrementalReset.c
	maya/MultipleInheritanceParser.c
	maya/InstanceCommand.c
	maya/InstanceSaveLoadCommands.c
	maya/InstanceFunctions.c
	maya/InstanceManager.c
	maya/InstanceModifyAndDuplicate.c
	maya/InstanceMultifieldTypeSlot.c
	maya/InstanceParser.c
	maya/InstanceQuery.c
	maya/InstanceSetQueryParser.c
	maya/IOFunctions.c
	maya/LogicalDependencies.c
	maya/MemoryAllocation.c
	maya/MiscFunctions.c
	maya/DefmoduleBinarySaveLoad.c
	maya/DefModuleBasicCommands.c
	maya/Defmodule.c
	maya/DefmoduleParser.c
	maya/DefmoduleUtility.c
	maya/DefmessageHandlerCommands.c
	maya/DefmessageHandlerFunctions.c
	maya/DefmessageHandlerDispatch.c
	maya/DefmessageHandlerParser.c
	maya/Multifield.c
	maya/MultifieldFunctions.c
	maya/ObjectBinaryLoadSave.c
	maya/ObjectReteBinarySaveLoad.c
	maya/ObjectPatternMatcher.c
	maya/InferenceEngineObjectAccessRotuines.c
	maya/InferenceEngineObjectParsingRoutines.c
	maya/ObjectReteMatch.c
	maya/ParsingFunctions.c
	maya/Pattern.c
	maya/PrettyPrint.c
	maya/ProceduralCodeSupportRoutines.c
	maya/ProceduralFunctions.c
	maya/ProceduralFunctionsParser.c
	maya/PredicateFunctions.c
	maya/PrintUtility.c
	maya/ConstructProfilingFunctions.c
	maya/Reorder.c
	maya/ReteUtility.c
	maya/Retract.c
	maya/Router.c
	maya/RuleBinarySaveLoad.c
	maya/RuleBuild.c
	maya/BasicRuleCommands.c
	maya/RuleCommands.c
	maya/RuleConstraints.c
	maya/Defrule.c
	maya/RuleDelete.c
	maya/RuleLHSParsing.c
	maya/RuleParser.c
	maya/Scanner.c
	maya/SortingFunctions.c
	maya/StringFunctions.c
	maya/StringRouter.c
	maya/SymbolBinarySave.c
	maya/Symbol.c
	maya/SystemDependency.c
	maya/DeftemplateBinarySaveLoad.c
	maya/DeftemplateBasicCommands.c
	maya/Deftemplate.c
	maya/DeftemplateFunctions.c
	maya/DeftemplateLHS.c
	maya/DeftemplateParser.c
	maya/DeftemplateRHSParsing.c
	maya/DeftemplateUtilities.c
	maya/UserData.c
	maya/UserFunctions.c
	maya/Utility.c
	maya/Watch.c)
add_library(maya_extensions
	maya/BoostExtensions.cc
	maya/BoostExtensions.h
	maya/FunctionalExtensions.cpp
	maya/FunctionalExtensions.h
	maya/MayaExtensions.c
	maya/FactExtensions.h
	maya/InstanceExtensions.h
	maya/ExternalAddressTracker.h
	maya/Problem.h
	maya/DefruleView.cc
	maya/DefruleView.h
	maya/FactView.cc
	maya/FactView.h
	maya/DeftemplateView.cc
	maya/DeftemplateView.h
	maya/GenericView.h
	maya/NandFrameView.h
	maya/NandFrameView.cc)
add_library(realmz
		Attribute.h
		Attribute.cc
		Attributes.cc
		Attributes.h
		RaceData.cc
		RaceData.h
		RaceDataBuffer.h
		BinaryManipulation.h
		Caste.cc
		Caste.h
		Ability.h
		Ability.cc
		SpecialAbilities.cc
		SpecialAbilities.h
		DRVAdjustments.cc
		DRVAdjustments.h
		CasteConditions.cc
		CasteConditions.h
		CasteDataBuffer.h Character.cc Character.h Utilities.h Point.h Item.cc Item.h)

add_executable(dumpcaste CasteDecomposer.cpp)
add_executable(dumprace RaceDecomposer.cc)
add_executable(realmz_keygen KeyGen.cc)
target_link_libraries(dumpcaste PUBLIC realmz)
target_link_libraries(dumprace PUBLIC realmz)
add_executable(dump_character CharacterDump.cc)
target_link_libraries(dump_character PUBLIC realmz)

add_subdirectory(CharacterEditor)
