cmake_minimum_required(VERSION 3.10)

project(maya VERSION 6.40)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED True)
add_library(clips
	Agenda.h
	Analysis.h
	ArgumentAccess.h
	BasicMathFunctions.h
	BasicRuleCommands.h
	BinaryLoad.h
	BinarySave.h
	ClassCommands.h
	ClassExamination.h
	ClassFunctions.h
	ClassInfo.h
	ClassInitialization.h
	ClassParser.h
	ClassSlotParser.h
	clips.h
	CommandLine.h
	ConflictResolutionStrategy.h
	Constants.h
	ConstraintBinaryLoadSave.h
	ConstraintChecking.h
	Constraint.h
	ConstraintOperations.h
	ConstraintParser.h
	ConstraintUtilities.h
	Construct.h
	ConstructProfilingFunctions.h
	DefaultAttribute.h
	DeffactsBasicCommands.h
	DeffactsBinarySaveLoad.h
	Deffacts.h
	DeffactsParser.h
	DeffunctionBinaryLoadSave.h
	DeffunctionExecution.h
	Deffunction.h
	DeffunctionParser.h
	DefglobalBasicCommands.h
	DefglobalBinary.h
	DefglobalCommands.h
	Defglobal.h
	DefglobalParser.h
	DefinstancesBinaryLoadSave.h
	Definstances.h
	DefmessageHandlerCommands.h
	DefmessageHandlerDispatch.h
	DefmessageHandlerFunctions.h
	DefmessageHandlerParser.h
	DefModuleBasicCommands.h
	DefmoduleBinarySaveLoad.h
	Defmodule.h
	DefmoduleParser.h
	DefmoduleUtility.h
	Defrule.h
	DeftemplateBasicCommands.h
	DeftemplateBinarySaveLoad.h
	DeftemplateFunctions.h
	Deftemplate.h
	DeftemplateLHS.h
	DeftemplateParser.h
	DeftemplateRHSParsing.h
	DeftemplateUtilities.h
	Developer.h
	Drive.h
	Engine.h
	Entities.h
	Environment.h
	Evaluation.h
	Expression.h
	ExtendedMathFunctions.h
	ExternalFunctions.h
	FactExtensions.h
	Fact.h
	File.h
	Generate.h
	GenericFunctionBinaryLoadSave.h
	GenericFunctionCommands.h
	GenericFunctionExecution.h
	GenericFunction.h
	GenericFunctionParser.h
	ImplicitSystemMethodsParsing.h
	IncrementalReset.h
	InferenceEngineObjectAccessRotuines.h
	InferenceEngineObjectParsingRoutines.h
	InstanceCommand.h
	InstanceFunctions.h
	InstanceManager.h
	InstanceModifyAndDuplicate.h
	InstanceMultifieldTypeSlot.h
	InstanceParser.h
	InstanceQuery.h
	InstanceSaveLoadCommands.h
	InstanceSetQueryParser.h
	IOFunctions.h
	LogicalDependencies.h
	Match.h
	MayaExtensions.h
	MayaSetup.h
	MemoryAllocation.h
	MiscFunctions.h
	Multifield.h
	MultipleInheritanceParser.h
	Network.h
	ObjectBinaryLoadSave.h
	Object.h
	ObjectPatternMatcher.h
	ObjectReteBinarySaveLoad.h
	ObjectReteMatch.h
	OperatingSystemShim.h
	ParsingFunctions.h
	Pattern.h
	Platform.h
	PredicateFunctions.h
	PrettyPrint.h
	PrintUtility.h
	ProceduralCodeSupportRoutines.h
	ProceduralFunctions.h
	ProceduralFunctionsParser.h
	Reorder.h
	ReteUtility.h
	Retract.h
	Router.h
	RuleBinarySaveLoad.h
	RuleBuild.h
	RuleCommands.h
	RuleConstraints.h
	RuleDelete.h
	RuleLHSParsing.h
	RuleParser.h
	Scanner.h
	Setup.h
	SortingFunctions.h
	StringFunctions.h
	StringRouter.h
	Symbol.h
	SystemDependency.h
	UserData.h
	UserSetup.h
	Utility.h
	Watch.h
	Agenda.c
	Analysis.c
	ArgumentAccess.c
	BinaryLoad.c
	BasicMathFunctions.c
	BinarySave.c
	ClassCommands.c
	ClassExamination.c
	ClassFunctions.c
	ClassInfo.c
	ClassInitialization.c
	ClassParser.c
	ClassSlotParser.c
	CommandLine.c
	Construct.c
	Constraint.c
	ConflictResolutionStrategy.c
	ConstructBinaryLoadSave.c
	ConstructCommand.c
	ConstructParser.c
	ConstraintBinaryLoadSave.c
	ConstraintChecking.c
	ConstraintOperations.c
	ConstraintParser.c
	ConstraintUtilities.c
	DefaultAttribute.c
	Definstances.c
	Developer.c
	DeffactsBinarySaveLoad.c
	DeffactsBasicCommands.c
	Deffacts.c
	DeffactsParser.c
	DeffunctionBinaryLoadSave.c
	DeffunctionExecution.c
	Deffunction.c
	DeffunctionParser.c
	DefinstancesBinaryLoadSave.c
	Drive.c
	ExtendedMathFunctions.c
	Engine.c
	Environment.c
	EnvironmentBuild.c
	Evaluation.c
	Expression.c
	ExpressionBinary.c
	ExpressionOperations.c
	ExpressionParser.c
	ExternalFunctions.c
	FactBinarySaveLoad.c
	FactBuild.c
	FactCommands.c
	FactLoadSaveRoutines.c
	FactFunctions.c
	FactReteFunctionGeneration.c
	FactHashing.c
	FactLHSPatternParsing.c
	FactMatch.c
	FactManager.c
	FactRetePrintFunctions.c
	FactSetQueriesParser.c
	FactQuery.c
	FactReteAccessFunctions.c
	FactRHSPatternParser.c
	File.c
	FileRouter.c
	FileUtilities.c
	Generate.c
	GenericFunctionBinaryLoadSave.c
	GenericFunctionCommands.c
	GenericFunctionExecution.c
	GenericFunction.c
	GenericFunctionParser.c
	DefglobalBinary.c
	DefglobalBasicCommands.c
	DefglobalCommands.c
	Defglobal.c
	DefglobalParser.c
	ImplicitSystemMethodsParsing.c
	IncrementalReset.c
	MultipleInheritanceParser.c
	InstanceCommand.c
	InstanceSaveLoadCommands.c
	InstanceFunctions.c
	InstanceManager.c
	InstanceModifyAndDuplicate.c
	InstanceMultifieldTypeSlot.c
	InstanceParser.c
	InstanceQuery.c
	InstanceSetQueryParser.c
	IOFunctions.c
	LogicalDependencies.c
	MemoryAllocation.c
	MiscFunctions.c
	DefmoduleBinarySaveLoad.c
	DefModuleBasicCommands.c
	Defmodule.c
	DefmoduleParser.c
	DefmoduleUtility.c
	DefmessageHandlerCommands.c
	DefmessageHandlerFunctions.c
	DefmessageHandlerDispatch.c
	DefmessageHandlerParser.c
	Multifield.c
	MultifieldFunctions.c
	ObjectBinaryLoadSave.c
	ObjectReteBinarySaveLoad.c
	ObjectPatternMatcher.c
	InferenceEngineObjectAccessRotuines.c
	InferenceEngineObjectParsingRoutines.c
	ObjectReteMatch.c
	ParsingFunctions.c
	Pattern.c
	PrettyPrint.c
	ProceduralCodeSupportRoutines.c
	ProceduralFunctions.c
	ProceduralFunctionsParser.c
	PredicateFunctions.c
	PrintUtility.c
	ConstructProfilingFunctions.c
	Reorder.c
	ReteUtility.c
	Retract.c
	Router.c
	RuleBinarySaveLoad.c
	RuleBuild.c
	BasicRuleCommands.c
	RuleCommands.c
	RuleConstraints.c
	Defrule.c
	RuleDelete.c
	RuleLHSParsing.c
	RuleParser.c
	Scanner.c
	SortingFunctions.c
	StringFunctions.c
	StringRouter.c
	SymbolBinarySave.c
	Symbol.c
	SystemDependency.c
	DeftemplateBinarySaveLoad.c
	DeftemplateBasicCommands.c
	Deftemplate.c
	DeftemplateFunctions.c
	DeftemplateLHS.c
	DeftemplateParser.c
	DeftemplateRHSParsing.c
	DeftemplateUtilities.c
	UserData.c
	UserFunctions.c
	Utility.c
	Watch.c)
add_library(maya_extensions 
	BoostExtensions.cc
	BoostExtensions.h
	FunctionalExtensions.cpp
	FunctionalExtensions.h
	MayaExtensions.c FactExtensions.h InstanceExtensions.h ExternalAddressTracker.h Problem.h DefruleView.cc DefruleView.h FactView.cc FactView.h DeftemplateView.cc DeftemplateView.h GenericView.h NandFrameView.h NandFrameView.cc)
# TODO express the configurable dependencies in setup.h using CMAKE instead
add_executable(maya cmd/repl/main.c DefclassView.cc DefclassView.h)
target_link_libraries(maya PUBLIC
	boost_system
	boost_filesystem
	clips
	maya_extensions)
target_include_directories(maya PUBLIC "${PROJECT_SRC_DIR}")
